edit:layout,ルーティング

--- a/app/views/diagnoses/new.html.erb
+++ b/app/views/diagnoses/new.html.erb
@@ -2,7 +2,7 @@
   今食べたいスイーツ診断
 </div>
 
-<div class="mt-6 container mx-auto px-6 py-10 bg-white rounded-xl min-h-screen-sm max-w-screen-sm">
+<div class="mt-6 container mx-auto px-6 py-10 bg-white shadow-sm shadow-2xs rounded-xl min-h-screen-sm max-w-screen-sm">
   <div class="justify-items-center">
     <%= turbo_frame_tag "diagnoses_result" do %>
       <%= render "form" %>
