--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -7,8 +7,8 @@
     </div>
     <div>
     <ul class="flex mr-4">
-      <%= link_to 'ログイン', new_user_session_path, class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5" %>
-      <%= link_to 'ユーザー登録', new_user_registration_path, class: "mr-4 text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5" %>
+      <%= link_to 'ログイン', new_user_session_path, class: "mr-4 px-5 py-3 text-yellow-50 bg-yellow-900 rounded-lg" %>
+      <%= link_to 'ユーザー登録', new_user_registration_path, class: "mr-4 px-5 py-3 text-yellow-50 bg-yellow-900 rounded-lg" %>
     </ul>
   </nav>
   <div class="flex items-center justify-center">
