--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,7 @@
-<div class="container mx-auto px-6 py-15 my-15 bg-white rounded-xl min-h-screen max-w-screen-lg">
+<div class="container mx-auto px-1 py-13 my-15 bg-white shadow-sm shadow-2xs rounded-xl min-h-screen max-w-screen-lg">
+  <div class="mx-15">
   <%= render "shared/object_error_messages", object: @post %>
+  </div>
   <%= form_with model: @post do |f| %>
     <div class="grid grid-cols-2 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 justify-items-center">
       <div>
@@ -11,9 +13,9 @@
             <p>ここに画像が入ります</p>
           </div>
         <% end %>
-        <div class="mt-12.5">
+        <div class="mt-2">
           <%= f.label :image, class: "text-yellow-950 font-bold" %>
-          <%= f.file_field :image, class: "appearance-none bg-stone-50 border border-yellow-950 rounded w-full py-1.5 px-2 text-yellow-950 cursor-pointer" %>
+          <%= f.file_field :image, class: "w-100 py-2 px-2 appearance-none bg-stone-50 border border-yellow-950 rounded w-full text-gray-500 cursor-pointer" %>
         </div>
       </div>
       <div class="ml-8 mr-8 col-span-1 justify-self-start">
@@ -22,7 +24,7 @@
             <%= f.label :title, class: "text-yellow-950" %>
             <span class="text-red-600">*</span>
           </div>
-          <%= f.text_field :title, class: "w-96 py-1.5 bg-stone-50 border border-yellow-950 rounded-md" %>
+          <%= f.text_field :title, class: "w-100 py-2 px-2 bg-stone-50 border border-yellow-950 rounded-md" %>
         </div>
 
         <div class="mb-5 flex flex-col">
@@ -30,12 +32,12 @@
             <%= f.label :body, class: "text-yellow-950" %>
             <span class="text-red-600">*</span>
           </div>
-          <%= f.text_area :body, class: "w-96 bg-stone-50 border border-yellow-950 rounded-md", rows: "12" %>
+          <%= f.text_area :body, class: "w-100 bg-stone-50 px-2 border border-yellow-950 rounded-md", rows: "12" %>
         </div>
 
         <div class="mb-5 flex flex-col">
           <%= f.label :tag_names, class: "text-yellow-950 font-bold" %>
-          <%= f.text_field :tag_names, value: f.object.tag_names, class: "w-96 py-1.5 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 複数登録する場合はカンマ( , )で区切ってください" %>
+          <%= f.text_field :tag_names, value: f.object.tag_names, class: "w-100 py-2 px-2 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 複数登録する場合はカンマ( , )で区切ってください" %>
         </div>
 
         <div class="mb-5 flex flex-col">
@@ -43,7 +45,7 @@
             <%= f.label :spot, class: "text-yellow-950" %>
             <span class="text-red-600">*</span>
           </div>
-          <%= f.text_field :spot, id: "spot", class: "w-96 py-1.5 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 店名や市町村名を入力すると候補が出てきます" %>
+          <%= f.text_field :spot, id: "spot", class: "w-100 py-2 px-2 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 店名や市町村名を入力すると候補が出てきます" %>
         </div>
 
         <div class="mb-5 flex flex-col">
@@ -51,7 +53,7 @@
             <%= f.label :address, class: "text-yellow-950" %>
             <span class="text-red-600">*</span>
           </div>
-          <%= f.text_field :address, id: "address", class: "w-96 py-1.5 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 候補を選択することで住所が自動で入力されます" %>
+          <%= f.text_field :address, id: "address", class: "w-100 py-2 px-2 bg-stone-50 border border-yellow-950 rounded-md", placeholder: " 候補を選択することで住所が自動で入力されます" %>
         </div>
 
         <%= f.hidden_field :latitude, id: "latitude" %>
