--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
-<div class="w-70 h-75 bg-white border border-gray-200 shadow-2xs rounded-xl p-4 dark:bg-neutral-900 dark:border-neutral-700 dark:shadow-neutral-700/70">
-  <a class="group relative block shrink-0 self-start overflow-hidden">
+<div class="w-65 h-72 p-4 bg-white shadow-sm shadow-2xs rounded-xl">
+  <div class="group relative block shrink-0 self-start overflow-hidden">
     <div class="m-2 flex flex-wrap justify-center mx-auto">
       <%= link_to post_path(post), class: "group" do %>
         <% if post.image.attached? %>
@@ -9,21 +9,28 @@
         <% end %>
       <% end %>
     </div>
-  </a>
-  <h3 class="text-base text-center font-black text-yellow-900">
-    <%= link_to post.title, post_path(post), class:"hover:text-yellow-600" %>
+  </div>
+  <h3 class="text-base text-center font-bold text-yellow-900">
+    <%= link_to post.title, post_path(post), class: "hover:text-yellow-600" %>
   </h3>
-    <div class="flex items-end justify-between mt-auto">
-    <div class="text-yellow-600">
+  <div class="flex items-end justify-between mt-auto">
+    <div class="mr-12 text-xs text-yellow-600">
       <i><%= l post.created_at %></i>
     </div>
     <% if current_user.notown?(post) %>
-        <%= render 'like_buttons', { post: post } %>
+      <%= render 'like_buttons', { post: post } %>
     <% else %>
-    <div class="mt-3">
-      <%= link_to "編集", edit_post_path(post), class: "focus:outline-none cursor-pointer yellow-950" %>
-      <%= link_to "削除", post_path(post), class: "focus:outline-none cursor-pointer yellow-950", data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }  %>
-    </div>
+      <%= link_to edit_post_path(post), class: "focus:outline-none cursor-pointer" do %>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5.5 text-yellow-950">
+          <path stroke-linecap="round" stroke-linejoin="round"
+          d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
+        </svg>
+      <% end %>
+      <%= link_to post_path(post), class: "focus:outline-none cursor-pointer", data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" } do %>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5.5 text-yellow-950">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+        </svg>
+      <% end %>
     <% end %>
   </div>
 </div>
