--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -1,16 +1,16 @@
-<div class="m-4 flex flex-wrap gap-4 justify-center items-center">
+<div class="flex flex-wrap gap-4 justify-center items-center">
   <%= search_form_for q, url: url do |f| %>
     <% if current_page?(my_posts_user_path(current_user))%>
       <%= f.date_field :created_at_gteq,
                         include_blank: true,
-                        class: "mr-1 w-30 bg-stone-50 p-1.5 border border-stone-950 rounded-md" %>～ 
+                        class: "mr-1 p-2 w-30 bg-stone-50 border border-yellow-950 rounded-md" %>～ 
       <%= f.date_field :created_at_lteq_end_of_day,
                       include_blank: true,
-                      class: "mr-1 w-30 bg-stone-50 p-1.5 border border-stone-950 rounded-md" %>
+                      class: "mr-1 p-2 w-30 bg-stone-50 border border-yellow-950 rounded-md" %>
     <% end %>
-    <%= f.search_field :title_cont, placeholder: " 料理名", class: "mr-1 w-50 bg-stone-50 p-1.5 border border-stone-950 rounded-md" %>
-    <%= f.search_field :tags_name_cont, placeholder: " タグ", class: "mr-1 w-50 bg-stone-50 p-1.5 border border-stone-950 rounded-md" %>
-    <%= f.search_field :body_or_tags_name_cont, placeholder: " キーワード", class: "mr-1 w-96 bg-stone-50 p-1.5 border border-stone-950 rounded-md" %>
-    <%= f.submit "検索", class: "mt-4 rounded-md bg-yellow-900 py-1.5 px-2 text-white focus:outline-none cursor-pointer" %>
+    <%= f.search_field :title_cont, placeholder: " 料理名", class: "mr-1 p-2 w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
+    <%= f.search_field :tags_name_cont, placeholder: " タグ", class: "mr-1 p-2 w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
+    <%= f.search_field :body_or_tags_name_cont, placeholder: " キーワード", class: "mr-1 p-2 w-96 bg-stone-50 border border-yellow-950 rounded-md" %>
+    <%= f.submit "検索", class: "mt-4 rounded-md bg-yellow-900 py-2 px-3 text-white focus:outline-none cursor-pointer" %>
   <% end %>
 </div>
