--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,11 @@
-<%= render 'shared/flash_messages' %>
+<%= render "shared/flash_messages" %>
 
-<div class="mt-5">
+<div class="my-7">
   <%= render 'search_form', q: @q, url: posts_path %>
 </div>
 
 <% if @posts.present? %>
-  <div class="mt-7 max-w-300 mx-auto">
+  <div class="max-w-275 mx-auto">
     <div class="grid grid-cols-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 justify-items-center">
       <%= render @posts %>
     </div>
