--- a/app/views/posts/likes.html.erb
+++ b/app/views/posts/likes.html.erb
@@ -1,13 +1,13 @@
 <%= render 'shared/flash_messages' %>
 
-<div class= "mt-10 font-bold text-center text-2xl text-yellow-900">
+<div class= "mt-10 mb-4 font-bold text-center text-2xl text-yellow-900">
   お気に入り投稿一覧
 </div>
 
 <%= render 'search_form', q: @q, url: likes_posts_path %>
 
 <% if @like_posts.present? %>
-  <div class="mt-15 max-w-screen-xl mx-auto">
+  <div class="mt-7 max-w-screen-xl mx-auto">
     <div class="grid grid-cols-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 justify-items-center">
       <%= render @like_posts %>
     </div>
