--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/flash_messages" %>
-<div class="container mx-auto px-6 py-15 my-15 bg-white rounded-xl min-h-screen max-w-screen-lg">
+<div class="container mx-auto px-6 py-15 my-15 bg-white rounded-xl min-h-screen max-w-screen-lg text-sm">
   <div class="grid grid-cols-2 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 justify-items-center">
     <div>
       <% if @post.image.attached? %>
@@ -10,7 +10,7 @@
     </div>
 
     <div class="pr-15 col-span-1 justify-self-start">
-      <div class="text-sm text-gray-400">
+      <div class="text-gray-400">
         <%= l @post.created_at %>
       </div>
       <div class="flex justify-between mt-auto">
@@ -34,13 +34,13 @@
     </div>
 
     <div class="ml-18 col-span-2 justify-self-start">
-      <div class="flex-col font-bold text-yellow-950">
+      <div class="flex-col text-base font-bold text-yellow-950">
         <%= @post.spot %>
       </div>
       <div class="flex">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="mr-1 size-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 21v-7.5a.75.75 0 0 1 .75-.75h3a.75.75 0 0 1 .75.75V21m-4.5 0H2.36m11.14 0H18m0 0h3.64m-1.39 0V9.349M3.75 21V9.349m0 0a3.001 3.001 0 0 0 3.75-.615A2.993 2.993 0 0 0 9.75 9.75c.896 0 1.7-.393 2.25-1.016a2.993 2.993 0 0 0 2.25 1.016c.896 0 1.7-.393 2.25-1.015a3.001 3.001 0 0 0 3.75.614m-16.5 0a3.004 3.004 0 0 1-.621-4.72l1.189-1.19A1.5 1.5 0 0 1 5.378 3h13.243a1.5 1.5 0 0 1 1.06.44l1.19 1.189a3 3 0 0 1-.621 4.72M6.75 18h3.75a.75.75 0 0 0 .75-.75V13.5a.75.75 0 0 0-.75-.75H6.75a.75.75 0 0 0-.75.75v3.75c0 .414.336.75.75.75Z" />
-        </svg><%= @post.address %>
+        </svg><span class="mt-1"><%= @post.address %></span>
       </div>
     </div>
 
