--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,17 +1,17 @@
-<header class="font-mono text-xs">
+<header class="font-mono">
   <nav class="flex items-center justify-between flex-wrap bg-yellow-50 p-3">
     <div class="flex items-center justify-center ml-6">
-      <%= link_to root_path do %>
+      <%= link_to posts_path do %>
         <%= image_tag "SweetsLogロゴ（ヘッダー）", width: 250 %>
       <% end %>
     </div>
-    <ul class="flex mr-4">
-      <%= link_to '投稿する', new_post_path, class: "mr-4 px-5 py-2.5 text-yellow-50 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
-      <%= link_to '投稿一覧', posts_path, class: "mr-4 px-5 py-2.5 text-yellow-50 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
-      <%= link_to 'お気に入り', likes_posts_path, class: "mr-4 px-5 py-2.5 text-yellow-50 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
-      <%= link_to 'スイーツ診断', new_diagnose_path, class: "mr-4 px-5 py-2.5 text-yellow-50 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
-      <%= link_to 'マイページ', user_path(current_user.id), class: "mr-4 px-5 py-2.5 text-yellow-50 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
-      <%= button_to 'ログアウト', destroy_user_session_path, method: :delete, class: "mr-4 px-5 py-2.5 text-yellow-50 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
+    <ul class="flex mr-4 text-yellow-50 text-sm">
+      <%= link_to '投稿する', new_post_path, class: "mr-4 px-5 py-3 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
+      <%= link_to '投稿一覧', posts_path, class: "mr-4 px-5 py-3 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
+      <%= link_to 'お気に入り', likes_posts_path, class: "mr-4 px-5 py-3 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
+      <%= link_to 'スイーツ診断', new_diagnose_path, class: "mr-4 px-5 py-3 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
+      <%= link_to 'マイページ', user_path(current_user.id), class: "mr-4 px-5 py-3 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
+      <%= button_to 'ログアウト', destroy_user_session_path, method: :delete, class: "mr-4 px-5 py-3 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
     </ul>
   </nav>
   <div class="flex items-center justify-center">
