--- a/app/views/users/my_posts.html.erb
+++ b/app/views/users/my_posts.html.erb
@@ -4,7 +4,7 @@
 
 <%= render "posts/search_form", q: @q, url: my_posts_user_path(current_user) %>
 
-<div class="mt-4 flex justify-center">
+<div class="m-4 flex justify-center">
   <button id="toggle-calendar" class="font-semibold text-yellow-900 hover:text-yellow-600 cursor-pointer">
     カレンダーを表示
   </button>
@@ -26,8 +26,8 @@
 </div>
 
 <% if @posts.present? %>
-  <div class="mt-15 max-w-screen-xl mx-auto">
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-7 justify-items-center">
+  <div class="max-w-275 mx-auto">
+    <div class="grid grid-cols-4 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 justify-items-center">
       <%= render @posts %>
     </div>
     <nav class="mt-10">
