add:他ユーザープロフィールポスト一覧表示

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -61,7 +61,7 @@
       </div>
     </div>
     <div class="actions flex justify-center">
-      <%= f.submit nil, class: "mt-4 w-44 rounded-md bg-yellow-900 p-3 text-white focus:outline-none cursor-pointer" %>
+      <%= f.submit "投稿", class: "mt-4 w-40 rounded-md bg-yellow-900 p-3 text-white focus:outline-none cursor-pointer" %>
     </div>
 <% end %>
 </div>
