--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -10,17 +10,19 @@
       <% end %>
     </div>
   </div>
-  <h3 class="text-base text-center font-bold text-yellow-900">
+  <div class="text-base text-center font-bold text-yellow-900 truncate max-w-[95%]">
     <%= link_to post.title, post_path(post), class: "hover:text-yellow-600" %>
-  </h3>
+  </div>
   <div class="flex items-end justify-between mt-auto">
-    <div class="mr-12 text-xs text-yellow-600">
-      <i><%= l post.created_at %></i>
+    <div class="flex justify-self-start">
+      <%= render "user_profile_button", { user: post.user } %>
     </div>
     <% if current_user.notown?(post) %>
       <%= render 'like_buttons', { post: post } %>
     <% else %>
+    <div class="flex gap-1">
       <%= render "edit_and_destroy_buttons", { post: post } %>
+      </div>
     <% end %>
   </div>
 </div>
