--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -11,11 +11,13 @@
         <%= @user.name %>
       </div>
     </div>
-
-    <% if @user == current_user %>
-      <div class="mt-10">
-        <%= link_to "編集する", edit_user_path(current_user), class: "focus:outline-none cursor-pointer text-yellow-50 bg-yellow-900 rounded-lg px-5 py-2.5 hover:bg-yellow-700" %>
-      </div>
-    <% end %>
   </div>
 </div>
+
+<% if @user == current_user %>
+  <div class="flex justify-center">
+    <%= link_to "編集する", edit_user_path(current_user), class: "mt-4 w-40 rounded-md bg-yellow-900 p-3 text-center text-white focus:outline-none cursor-pointer" %>
+  </div>
+<% else %>
+    <%= render "post" %>
+<% end %>
