--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/flash_messages' %>
-<div class="flex items-center justify-center m-45">
+<div class="flex items-center justify-center my-60">
   <%= image_tag "SweetsLogロゴ（ホーム）" %>
 </div>
 <div class="slider">
@@ -9,7 +9,7 @@
     <% end %>
   <% end %>
 </div>
-<div class= "m-10 text-center text-base text-yellow-900">
+<div class= "m-20 text-center text-base text-yellow-900">
   <ul>
     <li>美味しい<span class="font-bold">スイーツ</span>を食べた</li>
     <li>幸せな思い出、<span class="font-bold">ログ</span>しよう。</li>
@@ -29,7 +29,7 @@
 <div class="flex items-center justify-center">
   <div class="border-b border-yellow-950 w-370"></div>
 </div>
-<div class="flex items-center justify-center">
+<div class="mb-5 flex items-center justify-center">
   <div class="grid grid-cols-2 divide-x h-75">
     <div>03</div>
     <div>04</div>
