--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,14 +16,12 @@
     <%= javascript_include_tag "https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body>
-    <div class= "bg-yellow-50 min-h-[100vh] pb-10 font-mono text-sm">
-      <% if user_signed_in? %>
-        <%= render 'shared/header' %>
-      <% else %>
-        <%= render 'shared/before_login_header' %>
-      <% end %>
-      <%= yield %>
-    </div>
-   </body>
- </html>
+  <body class= "bg-yellow-50 min-h-[100vh] pb-10 font-mono text-sm">
+    <% if user_signed_in? %>
+      <%= render 'shared/header' %>
+    <% else %>
+      <%= render 'shared/before_login_header' %>
+    <% end %>
+    <%= yield %>
+  </body>
+</html>
