--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -15,13 +15,13 @@
   </div>
   <div class="flex items-end justify-between mt-auto">
     <div class="flex justify-self-start">
-      <%= render "user_profile_button", { user: post.user } %>
+      <%= render "posts/user_profile_button", { user: post.user } %>
     </div>
     <% if current_user.notown?(post) %>
-      <%= render 'like_buttons', { post: post } %>
+      <%= render "like_buttons", { post: post } %>
     <% else %>
     <div class="flex gap-1">
-      <%= render "edit_and_destroy_buttons", { post: post } %>
+      <%= render "posts/edit_and_destroy_buttons", { post: post } %>
       </div>
     <% end %>
   </div>
