--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,17 +1,16 @@
-<header class="font-mono text-xs">
-  <nav class="flex items-center justify-between flex-wrap bg-yellow-50 p-3">
+<header>
+  <nav class="p-3 flex flex-wrap items-center justify-between bg-yellow-50">
     <div class="flex items-center justify-center ml-6">
       <%= link_to root_path do %>
         <%= image_tag 'SweetsLogロゴ（ヘッダー）', width: 250 %>
       <% end %>
     </div>
-    <div>
-    <ul class="flex mr-4">
-      <%= link_to 'ログイン', new_user_session_path, class: "mr-4 px-5 py-3 text-yellow-50 bg-yellow-900 rounded-lg" %>
-      <%= link_to 'ユーザー登録', new_user_registration_path, class: "mr-4 px-5 py-3 text-yellow-50 bg-yellow-900 rounded-lg" %>
+    <ul class="flex mr-4 text-yellow-50 text-sm">
+      <%= link_to 'ログイン', new_user_session_path, class: "mr-4 px-5 py-3 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
+      <%= link_to 'ユーザー登録', new_user_registration_path, class: "mr-4 px-5 py-3 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
     </ul>
   </nav>
-  <div class="flex items-center justify-center">
-    <div class="border-b border-yellow-950 w-370"></div>
+  <div class="flex justify-center">
+    <div class="mx-4 border border-dashed border-yellow-700 w-[97%]"></div>
   </div>
 </header>
