edit:カレンダー表示ボタンテキスト変更

--- a/app/views/users/my_posts.html.erb
+++ b/app/views/users/my_posts.html.erb
@@ -6,7 +6,7 @@
 
 <div class="m-4 flex justify-center">
   <button id="toggle-calendar" class="font-semibold text-yellow-900 hover:text-yellow-600 cursor-pointer">
-    カレンダーを表示
+    カレンダーを表示（日別の投稿件数を確認できます）
   </button>
 </div>
 <div id="calendar-container" style="display: none;">
