--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -5,9 +5,10 @@
       ～
       <%= f.date_field :created_at_lteq_end_of_day, include_blank: true, class: "p-2 w-30 bg-stone-50 border border-yellow-950 rounded-md" %>
     <% end %>
-    <%= f.select :address_cont, Prefecture.list, { include_blank: " 都道府県" }, class: "p-2 w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
+    <%= f.select :address_cont, Prefecture.list, { include_blank: " 都道府県" }, class: "p-2 w-25 bg-stone-50 border border-yellow-950 rounded-md" %>
     <%= f.search_field :title_cont, placeholder: " 料理名", class: "p-2 w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
-    <%= f.search_field :body_or_tags_name_cont, placeholder: " キーワード", class: "p-2 w-96 bg-stone-50 border border-yellow-950 rounded-md" %>
+    <%= f.search_field :tags_name_cont, placeholder: " タグ", class: "mr-1 p-2 w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
+    <%= f.search_field :title_or_body_or_tags_name_cont, placeholder: " キーワード", class: "p-2 w-50 bg-stone-50 border border-yellow-950 rounded-md" %>
     <%= f.submit "検索", class: "rounded-md bg-yellow-900 py-2 px-3 text-white focus:outline-none cursor-pointer" %>
   <% end %>
 </div>
