--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -25,7 +25,7 @@
     <div class="w-100 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
         <%= image_tag "投稿アイコン（トップ）.png" %>
-        <div class="pt-4 text-base text-center font-bold text-yellow-900">
+        <div class="pt-4 text-base text-center text-yellow-900">
           <ul>
             <li>美味しいスイーツを食べた</li>
             <li>幸せな気持ちを写真や店舗名と共に投稿。</li>
@@ -37,7 +37,7 @@
     <div class="w-100 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
         <%= image_tag "お気に入りアイコン（トップ）.png" %>
-        <div class="pt-4 text-base text-center font-bold text-yellow-900">
+        <div class="pt-4 text-base text-center text-yellow-900">
           <ul>
             <li>みんなの投稿を見て、</li>
             <li>食べてみたいスイーツをお気に入り登録。</li>
@@ -49,7 +49,7 @@
     <div class="w-100 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
         <%= image_tag "検索アイコン（トップ）.png" %>
-        <div class="pt-4 text-base text-center font-bold text-yellow-900">
+        <div class="pt-4 text-base text-center text-yellow-900">
           <ul>
             <li>都道府県、メニュー名、キーワード等で</li>
             <li>食べてみたいスイーツを検索できます。</li>
@@ -61,7 +61,7 @@
     <div class="w-100 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
         <%= image_tag "診断アイコン（トップ）.png" %>
-        <div class="pt-4 text-base text-center font-bold text-yellow-900">
+        <div class="pt-4 text-base text-center text-yellow-900">
           <ul>
             <li>何を食べるか迷ったときは、</li>
             <li>スイーツ診断。</li>
@@ -76,6 +76,6 @@
 
 <% unless user_signed_in? %>
   <div class="my-15">
-    <%= link_to '会員登録（無料） をして使ってみる', new_user_registration_path, class: "my-10 mx-auto block w-[60%] text-base text-center text-yellow-50 bg-yellow-900 px-5 py-2.5 rounded-xl hover:bg-yellow-700" %>
+    <%= link_to '会員登録（無料） をして使ってみる', new_user_registration_path, class: "my-10 mx-auto block w-[60%] text-base text-center text-white bg-yellow-900 px-5 py-2.5 rounded-xl hover:bg-yellow-700" %>
   </div>
 <% end %>
