edit:一部cssファイル切り出し

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <%= javascript_include_tag "https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body class= "bg-yellow-50 min-h-[100vh] pb-10 font-mono text-sm">
+  <body>
     <% if user_signed_in? %>
       <%= render 'shared/header' %>
     <% else %>
