--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/flash_messages" %>
-<div class="container mx-auto px-5 py-15 my-15 bg-white shadow-sm shadow-2xs rounded-xl min-h-screen max-w-screen-lg text-sm">
+<div class="container mx-auto px-5 py-15 my-15 bg-white shadow-sm shadow-2xs rounded-xl min-h-screen max-w-screen-lg">
   <div class="grid grid-cols-2 sm:grid-cols-1 md:grid-cols-1 lg:grid-cols-2 justify-items-center">
     <div class="mb-10">
       <% if @post.image.attached? %>
