--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -6,8 +6,8 @@
       <% end %>
     </div>
     <ul class="flex mr-4 text-yellow-50 text-sm">
-      <%= link_to 'ログイン', new_user_session_path, class: "mr-4 px-5 py-3 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
-      <%= link_to 'ユーザー登録', new_user_registration_path, class: "mr-4 px-5 py-3 bg-yellow-900 rounded-lg hover:bg-yellow-700" %>
+      <%= link_to 'ログイン', new_user_session_path, class: "brown-button" %>
+      <%= link_to 'ユーザー登録', new_user_registration_path, class: "brown-button" %>
     </ul>
   </nav>
   <div class="flex justify-center">
