--- a/app/views/users/my_posts.html.erb
+++ b/app/views/users/my_posts.html.erb
@@ -1,4 +1,4 @@
-<div class= "mt-10 mb-4 font-bold text-center text-2xl text-yellow-900">
+<div class= "my-10 font-bold text-center text-2xl text-yellow-900">
   <%= @user.name %>の投稿
 </div>
 
