--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,131 +1,13 @@
 @import "tailwindcss";
+@import "./pagy.css";
+@import "./simple_calendar.css";
+@import "./fade_in.css";
+@import "./header.css";
 
-.pagy {
-  display: flex;
-  justify-content: center;
-  font-family: sans-serif;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  font-weight: 600;
-  color: white;
-}
-.pagy > :not([hidden]) ~ :not([hidden]) {
-  --space-reverse: 0;
-  margin-right: calc(0.25rem * var(--space-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--space-reverse)));
-}
-.pagy a:not(.gap) {
-  display: block;
-  text-decoration: none;
-  border-radius: 0.5rem;
-  background-color: var(--color-yellow-700);
-  padding: 0.25rem 0.75rem;
-  color: inherit;
-}
-.pagy a:not(.gap):hover {
-  background-color: var(--color-yellow-900);
-}
-.pagy a:not(.gap):not([href]) {
-  cursor: default;
-  background-color: var(--color-yellow-700);
-  color: white;
-}
-.pagy a:not(.gap).current {
-  background-color: var(--color-yellow-950);
-  color: white;
-}
-.pagy label {
-  white-space: nowrap;
-  display: inline-block;
-  border-radius: 0.5rem;
-  background-color: #e5e7eb;
-  padding: 0.125rem 0.75rem;
-}
-.pagy label input {
-  line-height: 1.5rem;
-  border-radius: 0.375rem;
-  border-style: none;
-  background-color: #f3f4f6;
-}
-
-.simple-calendar {
-  table {
-    -webkit-border-horizontal-spacing: px;
-    -webkit-border-vertical-spacing: 0px;
-    background-color: rgba(255, 255, 255, 0);
-    border: 1px solid var(--color-yellow-950);
-    border-collapse: collapse;
-    box-sizing: border-box;
-  }
-
-  tr {
-    border-collapse: collapse;
-  }
-
-  th {
-    width: 50px;
-    padding: 5px;
-    border-bottom: 2px solid var(--color-yellow-950);
-    border-collapse: collapse;
-    border-left: 1px solid var(--color-yellow-950);
-    border-right: 1px solid var(--color-yellow-950);
-    box-sizing: border-box;
-    text-align: center;
-    background: #ffffff;
-    color: var(--color-yellow-900);
-  }
-
-  td {
-    padding: 5px;
-    vertical-align: top;
-
-
-    border: 1px solid #ffffff;
-    border-top-color: var(--color-yellow-950);
-    border-top-style: solid;
-    border-top-width: 1px;
-    border-right-color: var(--color-yellow-950);
-    border-right-style: solid;
-    border-right-width: 1px;
-    border-bottom-color: var(--color-yellow-950);
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-    border-left-color: var(--color-yellow-950);
-    border-left-style: solid;
-    border-left-width: 1px;
-  }
-
-  .day {
-    height: 50px;
-    background: #ffffff;
-  }
-
-  .today {
-    background: #ffffc0;
-  }
-
-  .prev-month {
-    background: #e7e7e7;
-  }
-
-  .next-month {
-    background: #e7e7e7;
-
-  }
-}
-
-.fs10 {
-  font-size: 10px;
-}
-
-.box {
-  opacity: 0;
-  transition: .5s;
-  position: relative;
-  top: 50px;
-}
-
-.active {
-  opacity: 1;
-  top: 0;
+body {
+  background-color: var(--color-yellow-50);
+  min-height: 100vh;
+  padding-bottom: 2.5rem;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-size: 0.875rem; line-height: 1.25rem;
 }
