--- a/app/views/posts/likes.html.erb
+++ b/app/views/posts/likes.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/flash_messages' %>
 
-<div class= "mt-10 mb-4 font-bold text-center text-2xl text-yellow-900">
+<div class= "my-10 font-bold text-center text-2xl text-yellow-900">
   お気に入り投稿一覧
 </div>
 
