--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
-<div class= "mt-15 mb-10 font-bold text-center text-2xl text-yellow-900">
+<div class= "my-15 font-bold text-center text-2xl text-yellow-900">
   <%= @user.name %> の マイページ
 </div>
-<div class="mt-15 max-w-290 mx-auto">
+<div class="mb-45 max-w-290 mx-auto">
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 justify-items-center">
 
     <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
