--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -24,7 +24,7 @@
 </div>
 
 <div class="box fadeIn max-w-230 mx-auto">
-  <div class="justify-items-center grid grid-cols-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-10">
+  <div class="justify-items-center grid grid-cols-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2">
     <div class="w-100 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
         <%= image_tag "投稿アイコン（トップ）.png" %>
@@ -51,8 +51,8 @@
   </div>
 </div>
 
-<div class="box fadeIn mt-10 max-w-230 mx-auto">
-  <div class="justify-items-center grid grid-cols-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-10">
+<div class="box fadeIn mt-15 max-w-230 mx-auto">
+  <div class="justify-items-center grid grid-cols-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2">
     <div class="w-100 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
         <%= image_tag "検索アイコン（トップ）.png" %>
@@ -78,6 +78,6 @@
     </div>
   </div>
   <% unless user_signed_in? %>
-    <%= link_to '会員登録（無料） をして使ってみる', new_user_registration_path, class: "my-10 mx-auto block text-base text-center text-white bg-yellow-900 px-5 py-2.5 rounded-xl hover:bg-yellow-700" %>
+    <%= link_to '会員登録（無料） をして使ってみる', new_user_registration_path, class: "my-15 mx-auto block text-base text-center text-white bg-yellow-900 px-5 py-2.5 rounded-xl hover:bg-yellow-700" %>
   <% end %>
 </div>
