edit:レイアウト

--- a/app/views/posts/likes.html.erb
+++ b/app/views/posts/likes.html.erb
@@ -16,5 +16,5 @@
     </nav>
   </div>
 <% else %>
-  <div class="mt-10 text-center">掲示板がありません</div>
+  <div class="my-50 text-center">掲示板がありません</div>
 <% end %>
