フッターリンク仮置き

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,12 @@
 <footer>
-  <div class="flex justify-center my-10">
+  <div class="flex justify-center mt-10 mb-8">
     <div class="mx-4 border border-dashed border-yellow-700 w-[97%]"></div>
   </div>
+  <nav class="flex flex-wrap items-center justify-between bg-yellow-50">
+    <div class="flex items-center justify-center ml-10 text-xs">
+      <%= link_to "問い合わせフォーム(※開発中)", "#", class: "mr-4" %>
+      <%= link_to "プライバシーポリシー(※開発中)", "#", class: "mr-4" %>
+      <%= link_to "利用規約(※開発中)", "#", class: "mr-4" %>
+    </div>
+  </nav>
 </footer>
