--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,6 +43,7 @@
           <%= image_tag "設定マーク.png" %>
           <div class="pt-4 text-base text-center font-bold text-yellow-900">
             <span>個人情報変更</span>
+            <div>※開発中</div>
           </div>
         </div>
       <% end %>
