delete:none.png

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="p-3 flex flex-wrap items-center justify-between bg-yellow-50">
     <div class="flex items-center justify-center ml-6">
       <%= link_to posts_path do %>
-        <%= image_tag "SweetsLogロゴ（ヘッダー）", width: 250 %>
+        <%= image_tag "header_logo.png", width: 250 %>
       <% end %>
     </div>
     <ul class="flex mr-4 text-yellow-50 text-sm">
