--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/flash_messages' %>
 <div class="flex flex-col items-center justify-center mt-30 mb-50">
-  <%= image_tag "SweetsLogロゴ（ホーム）" %>
+  <%= image_tag "home_logo.png" %>
   <ul class= "text-center text-base text-yellow-900">
     <li>美味しい<span class="font-bold text-lg">「スイーツ」</span>を食べた</li>
     <li>幸せな思い出<span class="font-bold text-lg">「ログ」</span>しよう</li>
@@ -27,7 +27,7 @@
   <div class="justify-items-center grid grid-cols-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2">
     <div class="w-100 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
-        <%= image_tag "投稿アイコン（トップ）.png" %>
+        <%= image_tag "top_posts_icon.png" %>
         <div class="pt-4 text-base text-center text-yellow-900">
           <ul>
             <li>美味しいスイーツを食べた</li>
@@ -39,7 +39,7 @@
 
     <div class="w-100 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
-        <%= image_tag "お気に入りアイコン（トップ）.png" %>
+        <%= image_tag "top_likes_icon.png" %>
         <div class="pt-4 text-base text-center text-yellow-900">
           <ul>
             <li>みんなの投稿を見て、</li>
@@ -55,7 +55,7 @@
   <div class="justify-items-center grid grid-cols-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2">
     <div class="w-100 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
-        <%= image_tag "検索アイコン（トップ）.png" %>
+        <%= image_tag "top_search_icon.png" %>
         <div class="pt-4 text-base text-center text-yellow-900">
           <ul>
             <li>都道府県、メニュー名、キーワード等で</li>
@@ -67,7 +67,7 @@
 
     <div class="w-100 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
-        <%= image_tag "診断アイコン（トップ）.png" %>
+        <%= image_tag "top_diagnoses_icon.png" %>
         <div class="pt-4 text-base text-center text-yellow-900">
           <ul>
             <li>何を食べるか迷ったときは、</li>
