--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
     <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
       <%= link_to my_posts_user_path(current_user.id) do %>
         <div class= "p-6 flex flex-wrap justify-center">
-          <%= image_tag "自身の投稿ページ.png" %>
+          <%= image_tag "mypage_myposts_icon.png" %>
           <div class="pt-4 text-base text-center font-bold text-yellow-900">
             <span>自分の投稿</span>
           </div>
@@ -18,7 +18,7 @@
     <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
       <%= link_to likes_posts_path do %>
         <div class= "p-6 flex flex-wrap justify-center">
-          <%= image_tag "お気に入りページ.png" %>
+          <%= image_tag "mypage_likes_icon.png" %>
           <div class="pt-4 text-base text-center font-bold text-yellow-900">
             <span>お気に入りした投稿</span>
           </div>
@@ -29,7 +29,7 @@
     <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
       <%= link_to profile_user_path(current_user.id) do %>
         <div class= "p-6 flex flex-wrap justify-center">
-          <%= image_tag "プロフィールマーク.png" %>
+          <%= image_tag "mypage_profile_icon.png" %>
           <div class="pt-4 text-base text-center font-bold text-yellow-900">
             <span>プロフィール</span>
           </div>
@@ -40,7 +40,7 @@
     <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
       <%= link_to "#" do %>
         <div class= "p-6 flex flex-wrap justify-center">
-          <%= image_tag "設定マーク.png" %>
+          <%= image_tag "mypage_settings_icon.png" %>
           <div class="pt-4 text-base text-center font-bold text-yellow-900">
             <span>個人情報変更</span>
             <div>※開発中</div>
