edit:フォームレイアウト変更

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,12 +13,12 @@
             <p>ここに画像が入ります</p>
           </div>
         <% end %>
-        <div class="mt-5">
+        <div class="my-5">
           <%= f.label :image, class: "text-yellow-950 font-bold" %>
-          <%= f.file_field :image, accept: ".jpeg, .gif, .png, .jpg", class: "w-100 py-2 px-2 appearance-none bg-stone-50 border border-yellow-950 rounded w-full text-gray-500 cursor-pointer" %>
+          <%= f.file_field :image, accept: ".jpeg, .gif, .png, .jpg", class: "py-2 px-2 appearance-none bg-stone-50 border border-yellow-950 rounded w-full text-gray-500 cursor-pointer" %>
         </div>
       </div>
-      <div class="ml-8 mr-8 col-span-1 justify-self-start">
+      <div class="ml-8 mr-8 col-span-1 justify-items-center">
         <div class= "mb-5 flex flex-col">
           <div class= "flex font-bold">
             <%= f.label :title, class: "text-yellow-950" %>
