edit:未ログイン状態で遷移できるページ追加

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -17,12 +17,14 @@
     <div class="flex justify-self-start text-yellow-600">
       <%= post.created_at.strftime('%Y/%m/%d') %>
     </div>
-    <% if current_user.notown?(post) %>
-      <%= render "like_buttons", { post: post } %>
-    <% else %>
-    <div class="flex gap-1">
-      <%= render "posts/edit_and_destroy_buttons", { post: post } %>
-      </div>
+    <% if current_user %>
+      <% if current_user.notown?(post) %>
+        <%= render "like_buttons", { post: post } %>
+      <% else %>
+      <div class="flex gap-1">
+        <%= render "posts/edit_and_destroy_buttons", { post: post } %>
+        </div>
+      <% end %>
     <% end %>
   </div>
 </div>
