--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -23,52 +23,51 @@
   </div>
 </div>
 
-<div class="box fadeIn max-w-230 mx-auto">
-  <div class="justify-items-center grid grid-cols-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2">
-    <div class="w-100 h-75 p-10 bg-white shadow-sm rounded-xl">
+<div class="box fadeIn mx-auto max-w-[90%]">
+  <div class="justify-items-center grid grid-cols-4 gap-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+    <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
         <%= image_tag "top_posts_icon.png" %>
-        <div class="pt-4 text-base text-center text-yellow-900">
+        <div class="pt-4 text-center text-yellow-900">
           <ul>
             <li>美味しいスイーツを食べた</li>
-            <li>幸せな気持ちを写真や店舗名と共に投稿。</li>
+            <li>幸せな気持ちを写真や</li>
+            <li>店舗名と共に投稿。</li>
           </ul>
         </div>
       </div>
     </div>
 
-    <div class="w-100 h-75 p-10 bg-white shadow-sm rounded-xl">
+    <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
         <%= image_tag "top_likes_icon.png" %>
-        <div class="pt-4 text-base text-center text-yellow-900">
+        <div class="pt-4 text-center text-yellow-900">
           <ul>
             <li>みんなの投稿を見て、</li>
-            <li>食べてみたいスイーツをお気に入り登録。</li>
+            <li>食べてみたいスイーツを</li>
+            <li>お気に入り登録。</li>
           </ul>
         </div>
       </div>
     </div>
-  </div>
-</div>
 
-<div class="box fadeIn mt-15 max-w-230 mx-auto">
-  <div class="justify-items-center grid grid-cols-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2">
-    <div class="w-100 h-75 p-10 bg-white shadow-sm rounded-xl">
+    <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
         <%= image_tag "top_search_icon.png" %>
-        <div class="pt-4 text-base text-center text-yellow-900">
+        <div class="text-center text-yellow-900">
           <ul>
-            <li>都道府県、メニュー名、キーワード等で</li>
-            <li>食べてみたいスイーツを検索できます。</li>
+            <li>都道府県・メニュー名・</li>
+            <li>キーワード等の項目で</li>
+            <li>投稿を検索できます。</li>
           </ul>
         </div>
       </div>
     </div>
 
-    <div class="w-100 h-75 p-10 bg-white shadow-sm rounded-xl">
+    <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
         <%= image_tag "top_diagnoses_icon.png" %>
-        <div class="pt-4 text-base text-center text-yellow-900">
+        <div class="pt-4 text-center text-yellow-900">
           <ul>
             <li>何を食べるか迷ったときは、</li>
             <li>スイーツ診断。</li>
