--- a/app/views/posts/_search_form.html.erb
+++ b/app/views/posts/_search_form.html.erb
@@ -1,6 +1,6 @@
 <div class="flex flex-wrap gap-4 justify-center items-center">
   <%= search_form_for q, url: url do |f| %>
-    <% if current_page?(my_posts_user_path(current_user))%>
+    <% if current_user && current_page?(my_posts_user_path(current_user))%>
       <%= f.date_field :created_at_gteq, include_blank: true, class: "p-2 w-30 bg-stone-50 border border-yellow-950 rounded-md" %>
       ～
       <%= f.date_field :created_at_lteq_end_of_day, include_blank: true, class: "p-2 w-30 bg-stone-50 border border-yellow-950 rounded-md" %>
