--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -6,6 +6,7 @@
       <% end %>
     </div>
     <ul class="flex mr-4 text-yellow-50 text-sm">
+      <%= link_to '投稿一覧', posts_path, class: "brown-button" %>
       <%= link_to 'ログイン', new_user_session_path, class: "brown-button" %>
       <%= link_to 'ユーザー登録', new_user_registration_path, class: "brown-button" %>
     </ul>
