自動デプロイ検証

--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -54,7 +54,7 @@
     <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
         <%= image_tag "top_search_icon.png" %>
-        <div class="text-center text-yellow-900">
+        <div class="text-center text-yellow-900 mt-4">
           <ul>
             <li>都道府県・メニュー名・</li>
             <li>キーワード等の項目で</li>
