--- a/app/views/diagnoses/new.html.erb
+++ b/app/views/diagnoses/new.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class="w-[90%] md:w-150 mt-6 mx-auto container px-6 py-10 bg-white shadow-sm shadow-2xs rounded-xl min-h-screen-sm max-w-screen-sm">
-  <div class="justify-items-center">
+  <div class="flex items-center justify-center">
     <%= turbo_frame_tag "diagnoses_result" do %>
       <%= render "form" %>
     <% end %>
