--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,45 +10,49 @@
     </div>
     <div class="col-span-1 mt-6 md:mt-0 flex flex-col justify-start md:w-105 md:mr-8">
       <div class="mb-5 flex flex-col">
-        <div class="flex md:justify-between items-center">
+        <div class="flex justify-between items-center">
           <div class="text-2xl font-bold text-gray-800 mr-4 md:mr-0">
             <%= @post.title %>
           </div>
-        <% if current_user %>
-          <% if current_user.notown?(@post) %>
-            <div>
-              <%= render "like_buttons", { post: @post } %>
-            </div>
-          <% else %>
-            <div class="flex gap-2">
-              <%= render "edit_and_destroy_buttons", { post: @post } %>
+          <% if current_user %>
+            <% if current_user.notown?(@post) %>
+              <div>
+                <%= render "like_buttons", { post: @post } %>
+              </div>
+            <% else %>
+              <div class="flex gap-2">
+                <%= render "edit_and_destroy_buttons", { post: @post } %>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+        <div class="flex mt-1 gap-2">
+          <div class="flex">
+            <%= render "user_profile_button", { user: @user } %>
+          </div>
+          <div class=" text-gray-400">
+            <%= l @post.created_at %>
+          </div>
+        </div>
+        <div class= "mt-6 text-yellow-950 max-w-[90%]">
+          <%= simple_format(@post.body) %>
+        </div>
+        <div class="mt-6 flex-col">
+          <% @post.tags.each do |tag| %>
+            <div class="text-yellow-900">
+              #<%= link_to tag.name, posts_path(tag_name: tag.name) %>
             </div>
           <% end %>
-        <% end %>
-      </div>
-      <div class="flex mt-1 gap-2">
-        <div class="flex">
-          <%= render "user_profile_button", { user: @user } %>
         </div>
-        <div class=" text-gray-400">
-          <%= l @post.created_at %>
-        </div>
-      </div>
-      <div class= "mt-6 text-yellow-950 max-w-[90%]">
-        <%= simple_format(@post.body) %>
-      </div>
-      <div class="mt-6 flex-col">
-        <% @post.tags.each do |tag| %>
-          <div class="text-yellow-900">
-            #<%= link_to tag.name, posts_path(tag_name: tag.name) %>
-          </div>
-        <% end %>
       </div>
     </div>
-  </div>
 
-    <div class="mt-10 col-span-2 lg:ml-12 lg:col-span-1">
-      <div class="mx-auto flex flex-col items-center justify-center lg:items-start">
+    <div class="mt-12 mb-6 w-full col-span-2 flex items-center justify-center">
+      <div class="border-b border-yellow-950 w-[90%]"></div>
+    </div>
+
+    <div class="col-span-2">
+      <div class="flex flex-col justify-center items-center">
         <div class="sm:text-base font-bold text-yellow-950">
           <%= @post.spot %>
         </div>
@@ -61,7 +65,7 @@
     </div>
 
     <div class="col-span-2">
-      <div id="map" class="w-65 h-60 sm:w-[500px] md:h-[300px] lg:w-[850px] lg:h-[400px] mt-6 mb-6 rounded-xl"></div>
+      <div id="map" class="w-70 h-60 sm:w-[500px] md:h-[300px] lg:w-[850px] lg:h-[400px] my-6 rounded-xl"></div>
     </div>
   </div>
 
