--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <%= javascript_include_tag "https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body>
+  <body class="min-h-screen">
     <% if user_signed_in? %>
       <%= render 'shared/header' %>
     <% else %>
