--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -48,7 +48,7 @@
     </div>
 
     <div class="mt-12 mb-6 w-full col-span-2 flex items-center justify-center">
-      <div class="border-b border-yellow-950 w-[90%]"></div>
+      <div class="border-b border-yellow-950 w-[95%] "></div>
     </div>
 
     <div class="col-span-2">
@@ -64,13 +64,13 @@
       </div>
     </div>
 
-    <div class="col-span-2">
-      <div id="map" class="w-70 h-60 sm:w-[500px] md:h-[300px] lg:w-[850px] lg:h-[400px] my-6 rounded-xl"></div>
+    <div class="p-4 col-span-2 w-[100%]">
+      <div id="map" class="h-80 md:h-120 my-6 rounded-xl"></div>
     </div>
   </div>
 
   <div class="flex items-center justify-center">
-    <div class="border-b border-yellow-950 w-[90%]"></div>
+    <div class="border-b border-yellow-950 w-[95%]"></div>
   </div>
 </div>
 
