--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,17 +1,39 @@
-<header>
+<header class="bg-yellow-50 shadow-md">
   <nav class="p-3 flex flex-wrap items-center justify-between bg-yellow-50">
     <div class="flex items-center justify-center ml-6">
       <%= link_to root_path do %>
         <%= image_tag "header_logo.png", width: 250 %>
       <% end %>
     </div>
-    <ul class="flex mr-4 text-yellow-50 text-sm">
-      <%= link_to '投稿一覧', posts_path, class: "brown-button" %>
-      <%= link_to 'ログイン', new_user_session_path, class: "brown-button" %>
-      <%= link_to 'ユーザー登録', new_user_registration_path, class: "brown-button" %>
-    </ul>
+    <div class="hidden lg:flex">
+      <ul class="flex mr-2 text-yellow-900 text-sm font-semibold">
+        <%= link_to '投稿一覧', posts_path, class: "brown-button" %>
+        <%= link_to 'ログイン', new_user_session_path, class: "brown-button" %>
+        <%= link_to 'ユーザー登録', new_user_registration_path, class: "brown-button" %>
+      </ul>
+    </div>
+
+    <nav class="mr-4 lg:hidden">
+      <button id="togglebutton" class="mt-2">
+        <svg id="openbutton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 text-yellow-900 hover:text-yellow-700 cursor-pointer">
+        <path fill-rule="evenodd" d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm0 5.25a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+        </svg>
+        <svg id="closebutton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="hidden size-7 text-yellow-900 hover:text-yellow-700 cursor-pointer">
+        <path fill-rule="evenodd" d="M5.47 5.47a.75.75 0 0 1 1.06 0L12 10.94l5.47-5.47a.75.75 0 1 1 1.06 1.06L13.06 12l5.47 5.47a.75.75 0 1 1-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 0 1-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
+        </svg>
+      </button>
+    </nav>
   </nav>
-  <div class="flex justify-center">
-    <div class="mx-4 border border-dashed border-yellow-700 w-[97%]"></div>
-  </div>
+  <ul id="minimenu" class="hidden mx-auto w-full bg-yellow-900 text-center text-yellow-50 font-semibold">
+    <li class= "p-2 hover:bg-yellow-700"><%= link_to '投稿一覧', posts_path %></li>
+    <li class= "p-2 hover:bg-yellow-700"><%= link_to 'ログイン', new_user_session_path %></li>
+    <li class= "p-2 hover:bg-yellow-700"><%= link_to 'ユーザー登録', new_user_registration_path %></li>
+  </ul>
 </header>
+<script>
+  togglebutton.addEventListener('click', event => {
+    openbutton.classList.toggle('hidden');
+    closebutton.classList.toggle('hidden');
+    minimenu.classList.toggle('hidden');
+  })
+</script>
