--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,11 @@
-<footer>
-  <div class="flex justify-center mt-10 mb-8">
-    <div class="mx-4 border border-dashed border-yellow-700 w-[97%]"></div>
-  </div>
-  <nav class="flex flex-wrap items-center justify-between bg-yellow-50">
-    <div class="flex items-center justify-center ml-10 text-xs">
-      <%= link_to "問い合わせフォーム(※開発中)", "#", class: "mr-4" %>
-      <%= link_to "プライバシーポリシー(※開発中)", "#", class: "mr-4" %>
-      <%= link_to "利用規約(※開発中)", "#", class: "mr-4" %>
+<footer class="mt-6">
+  <nav style="box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1);" class="p-2 flex items-center justify-between bg-yellow-50">
+    <div class="m-1 flex items-center justify-center text-xs">
+      <ul class="text-yellow-900">
+        <li class="p-1 hover:text-yellow-700"><%= link_to "問い合わせフォーム(※開発中)", "#" %></li>
+        <li class="p-1 hover:text-yellow-700"><%= link_to "プライバシーポリシー(※開発中)", "#" %></li>
+        <li class="p-1 hover:text-yellow-700"><%= link_to "利用規約(※開発中)", "#" %></li>
+      </ul>
     </div>
   </nav>
 </footer>
