--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,47 +1,46 @@
-<header>
-  <nav class="p-3 flex flex-wrap items-center justify-between bg-yellow-50">
+<header class="bg-yellow-50 shadow-md">
+  <nav class="p-3 flex items-center justify-between">
     <div class="flex items-center justify-center ml-6">
       <%= link_to posts_path do %>
         <%= image_tag "header_logo.png", width: 250 %>
       <% end %>
     </div>
 
-    <div class="xl:flex">
-      <ul class="flex mr-4 text-yellow-50 text-sm font-semibold">
+    <div class="hidden lg:flex">
+      <ul class="flex mr-2 text-yellow-900 text-sm font-semibold">
         <%= link_to '投稿する', new_post_path, class: "brown-button" %>
         <%= link_to '投稿一覧', posts_path, class: "brown-button" %>
         <%= link_to 'お気に入り', likes_posts_path, class: "brown-button" %>
         <%= link_to 'スイーツ診断', new_diagnose_path, class: "brown-button" %>
         <%= link_to 'マイページ', user_path(current_user.id), class: "brown-button" %>
-        <%= button_to 'ログアウト', destroy_user_session_path, method: :delete, class: "brown-button" %>
+        <%= button_to 'ログアウト', destroy_user_session_path, method: :delete, class: "brown-button cursor-pointer" %>
       </ul>
     </div>
 
-    <div class="hidden mr-4">
-      <button class="outline-none menu-button">
-          <svg class="w-6 h-6 text-yellow-900 hover:text-yellow-700" x-show="! showMenu" fill="none" stroke-linecap="round"
-            stroke-linejoin="round" stroke-width="2" viewBox="0 00 24 24" stroke="currentColor">
-            <path d="m4 6h16M4 12h16M4 18h16">
-            <path>
-          </svg>
+    <nav class="mr-4 lg:hidden">
+      <button id="togglebutton" class="mt-2">
+        <svg id="openbutton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-7 text-yellow-900 hover:text-yellow-700 cursor-pointer">
+        <path fill-rule="evenodd" d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm0 5.25a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+        </svg>
+        <svg id="closebutton" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="hidden size-7 text-yellow-900 hover:text-yellow-700 cursor-pointer">
+        <path fill-rule="evenodd" d="M5.47 5.47a.75.75 0 0 1 1.06 0L12 10.94l5.47-5.47a.75.75 0 1 1 1.06 1.06L13.06 12l5.47 5.47a.75.75 0 1 1-1.06 1.06L12 13.06l-5.47 5.47a.75.75 0 0 1-1.06-1.06L10.94 12 5.47 6.53a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
+        </svg>
       </button>
-    </div>
-
-    <div class="hidden mobile-menu py-4 rounded-md mx-auto">
-      <ul class="flex flex-col justify-center items-center px-4 py-4 text-sm text-yellow-50 font-semibold">
-        <div class="grid grid-cols-2 gap-2">
-          <%= link_to '投稿する', new_post_path, class: "block w-full px-4 py-2 rounded-md bg-yellow-900 hover:bg-yellow-700 transition duration-200" %>
-          <%= link_to '投稿一覧', posts_path, class: "block w-full px-4 py-2 rounded-md bg-yellow-900 hover:bg-yellow-700 transition duration-200" %>
-          <%= link_to 'お気に入り', likes_posts_path, class: "block w-full px-4 py-2 rounded-md bg-yellow-900 hover:bg-yellow-700 transition duration-200" %>
-          <%= link_to 'スイーツ診断', new_diagnose_path, class: "block w-full px-4 py-2 rounded-md bg-yellow-900 hover:bg-yellow-700 transition duration-200" %>
-          <%= link_to 'マイページ', user_path(current_user.id), class: "block w-full px-4 py-2 rounded-md bg-yellow-900 hover:bg-yellow-700 transition duration-200" %>
-          <%= button_to 'ログアウト', destroy_user_session_path, method: :delete, class: "text-start block w-full px-4 py-2 rounded-md bg-yellow-900 hover:bg-yellow-700 transition duration-200" %>
-        </div>
-      </ul>
-    </div>
-
+    </nav>
   </nav>
-  <div class="flex justify-center">
-    <div class="mx-4 border border-dashed border-yellow-700 w-[97%]"></div>
-  </div>
+  <ul id="minimenu" class="hidden mx-auto w-full bg-yellow-900 text-center text-yellow-50 font-semibold">
+    <li class= "p-2 hover:bg-yellow-700"><%= link_to '投稿する', new_post_path%></li>
+    <li class= "p-2 hover:bg-yellow-700"><%= link_to '投稿一覧', posts_path %></li>
+    <li class= "p-2 hover:bg-yellow-700"><%= link_to 'お気に入り', likes_posts_path %></li>
+    <li class= "p-2 hover:bg-yellow-700"><%= link_to 'スイーツ診断', new_diagnose_path %></li>
+    <li class= "p-2 hover:bg-yellow-700"><%= link_to 'マイページ', user_path(current_user.id) %></li>
+    <li class= "p-2 hover:bg-yellow-700"><%= button_to 'ログアウト', destroy_user_session_path, method: :delete, class:"cursor-pointer" %></li>
+  </ul>
 </header>
+<script>
+  togglebutton.addEventListener('click', event => {
+    openbutton.classList.toggle('hidden');
+    closebutton.classList.toggle('hidden');
+    minimenu.classList.toggle('hidden');
+  })
+</script>
