--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
 <div class= "my-15 font-bold text-center text-2xl text-yellow-900">
   <%= @user.name %> の マイページ
 </div>
-<div class="mb-45 max-w-290 mx-auto">
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 justify-items-center">
+<div class="mb-42 flex items-center justify-center">
+  <div class="gap-5 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4 justify-items-center">
 
-    <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
+    <div class="w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
       <%= link_to my_posts_user_path(current_user.id) do %>
         <div class= "p-6 flex flex-wrap justify-center">
           <%= image_tag "mypage_myposts_icon.png" %>
@@ -15,7 +15,7 @@
       <% end %>
     </div>
 
-    <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
+    <div class="w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
       <%= link_to likes_posts_path do %>
         <div class= "p-6 flex flex-wrap justify-center">
           <%= image_tag "mypage_likes_icon.png" %>
@@ -26,7 +26,7 @@
       <% end %>
     </div>
 
-    <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
+    <div class="w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
       <%= link_to profile_user_path(current_user.id) do %>
         <div class= "p-6 flex flex-wrap justify-center">
           <%= image_tag "mypage_profile_icon.png" %>
@@ -37,7 +37,7 @@
       <% end %>
     </div>
 
-    <div class= "w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
+    <div class="w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
       <%= link_to "#" do %>
         <div class= "p-6 flex flex-wrap justify-center">
           <%= image_tag "mypage_settings_icon.png" %>
