マイページレイアウト変更

--- a/app/views/diagnoses/new.html.erb
+++ b/app/views/diagnoses/new.html.erb
@@ -1,8 +1,7 @@
-<div class= "mt-10 font-bold text-center text-2xl text-yellow-900">
-  今食べたいスイーツ診断
-</div>
-
-<div class="w-[90%] md:w-150 my-6 mx-auto container px-6 py-10 bg-white shadow-sm shadow-2xs rounded-xl min-h-screen-sm max-w-screen-sm">
+<div class="w-[90%] md:w-150 my-8 mx-auto px-6 pt-4 pb-10 container bg-white shadow-sm shadow-2xs rounded-xl min-h-screen-sm max-w-screen-sm">
+  <div class= "my-6 font-bold text-center text-2xl text-yellow-900">
+    今食べたいスイーツ診断
+  </div>
   <div class="flex items-center justify-center">
     <%= turbo_frame_tag "diagnoses_result" do %>
       <%= render "form" %>
