--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
-<footer class="mt-6">
+<footer>
   <nav style="box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1);" class="p-2 flex items-center justify-between bg-yellow-50">
-    <div class="m-1 flex items-center justify-center text-xs">
+    <div class="m-1 flex items-center justify-center text-xs font-semibold">
       <ul class="text-yellow-900">
         <li class="p-1 hover:text-yellow-700"><%= link_to "問い合わせフォーム(※開発中)", "#" %></li>
         <li class="p-1 hover:text-yellow-700"><%= link_to "プライバシーポリシー(※開発中)", "#" %></li>
