--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,7 @@
-<div class="container mx-auto px-6 py-15 my-15 bg-white shadow-sm shadow-2xs rounded-xl max-w-screen-sm">
+<div class="w-[90%] md:w-150 md:my-22 mt-6 container mx-auto px-2 py-10 bg-white shadow-sm shadow-2xs rounded-xl">
+  <div class="my-4 mb-6 font-bold text-center text-2xl text-yellow-900">
+    プロフィール編集
+  </div>
   <div class="justify-items-center">
     <%= form_with model: @user do |f| %>
       <div class="mb-6">
