--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="w-[90%] md:w-150 mt-6 container mx-auto px-2 pt-10 pb-6 bg-white shadow-sm shadow-2xs rounded-xl">
+<div class="w-[90%] md:w-150 my-6 container mx-auto px-2 pt-10 pb-6 bg-white shadow-sm shadow-2xs rounded-xl">
   <div class= "mt-4 mb-6 font-bold text-center text-2xl text-yellow-900">
     ユーザー登録
   </div>
