--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,11 @@
 <%= render "shared/flash_messages" %>
 
-<div class="my-10">
+<div class="mt-8">
   <%= render 'search_form', q: @q, url: posts_path %>
 </div>
 
 <% if @posts.present? %>
-  <div class="max-w-275 mx-auto">
+  <div class="my-8 max-w-275 mx-auto">
     <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 justify-items-center">
       <%= render @posts %>
     </div>
@@ -14,5 +14,5 @@
     </nav>
   </div>
 <% else %>
-  <div class="mb-3 text-center">掲示板がありません</div>
+  <div class="my-10 text-center">掲示板がありません</div>
 <% end %>
