--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,47 +1,48 @@
-<div class= "my-15 font-bold text-center text-2xl text-yellow-900">
-  <%= @user.name %> の マイページ
-</div>
-<div class="mb-42 flex items-center justify-center">
+
+<div class="w-[90%] md:w-150 lg:w-250 lg:my-26 my-6 container mx-auto px-10 py-10 bg-white shadow-sm shadow-2xs rounded-xl">
+  <div class="mb-8 font-bold text-center text-2xl text-yellow-900">
+    マイページ
+  </div>
   <div class="gap-5 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4 justify-items-center">
 
-    <div class="w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
+    <div class="w-50 h-50 p-8 text-center bg-white border-2 border-yellow-900 shadow-2xs rounded-lg">
       <%= link_to my_posts_user_path(current_user.id) do %>
-        <div class= "p-6 flex flex-wrap justify-center">
+        <div class= "flex flex-wrap justify-center">
           <%= image_tag "mypage_myposts_icon.png" %>
-          <div class="pt-4 text-base text-center font-bold text-yellow-900">
-            <span>自分の投稿</span>
+          <div class="p-2 text-base text-center font-bold text-yellow-900">
+            自分の投稿
           </div>
         </div>
       <% end %>
     </div>
 
-    <div class="w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
+    <div class="w-50 h-50 p-8 text-center bg-white border-2 border-yellow-900 shadow-2xs rounded-lg">
       <%= link_to likes_posts_path do %>
-        <div class= "p-6 flex flex-wrap justify-center">
+        <div class= "flex flex-wrap justify-center">
           <%= image_tag "mypage_likes_icon.png" %>
-          <div class="pt-4 text-base text-center font-bold text-yellow-900">
-            <span>お気に入りした投稿</span>
+          <div class="p-2 text-base text-center font-bold text-yellow-900">
+            <span>お気に入り投稿</span>
           </div>
         </div>
       <% end %>
     </div>
 
-    <div class="w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
+    <div class="w-50 h-50 p-8 text-center bg-white border-2 border-yellow-900 shadow-2xs rounded-lg">
       <%= link_to profile_user_path(current_user.id) do %>
-        <div class= "p-6 flex flex-wrap justify-center">
+        <div class= "flex flex-wrap justify-center">
           <%= image_tag "mypage_profile_icon.png" %>
-          <div class="pt-4 text-base text-center font-bold text-yellow-900">
+          <div class="p-2 text-base text-center font-bold text-yellow-900">
             <span>プロフィール</span>
           </div>
         </div>
       <% end %>
     </div>
 
-    <div class="w-60 h-60 text-center bg-white border border-yellow-900 shadow-2xs rounded-lg p-4 md:p-5">
+    <div class="w-50 h-50 p-8 text-center bg-white border-2 border-yellow-900 shadow-2xs rounded-lg">
       <%= link_to "#" do %>
-        <div class= "p-6 flex flex-wrap justify-center">
+        <div class= "flex flex-wrap justify-center">
           <%= image_tag "mypage_settings_icon.png" %>
-          <div class="pt-4 text-base text-center font-bold text-yellow-900">
+          <div class="p-2 text-base text-center font-bold text-yellow-900">
             <span>個人情報変更</span>
             <div>※開発中</div>
           </div>
