ホーム画面ロゴレイアウト変更

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="bg-yellow-50 shadow-md">
-  <nav class="p-3 flex items-center justify-between">
-    <div class="flex items-center justify-center ml-6">
+  <nav class="p-3 ml-4 flex items-center justify-between">
+    <div class="flex items-center justify-center">
       <%= link_to posts_path do %>
         <%= image_tag "header_logo.png", width: 250 %>
       <% end %>
