--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,9 +1,9 @@
 <%= render 'shared/flash_messages' %>
-<div class="flex flex-col items-center justify-center mt-30 mb-50">
-  <%= image_tag "home_logo.png" %>
-  <ul class= "text-center text-base text-yellow-900">
-    <li>美味しい<span class="font-bold text-lg">「スイーツ」</span>を食べた</li>
-    <li>幸せな思い出<span class="font-bold text-lg">「ログ」</span>しよう</li>
+<div class="flex flex-col items-center justify-center m-10">
+  <%= image_tag "SweetsLog_logo.png" %>
+  <ul class= "text-center text-xs sm:text-base text-yellow-900">
+    <li>美味しい<span class="font-bold text-base sm:text-lg">「スイーツ」</span>を食べた</li>
+    <li>幸せな思い出<span class="font-bold text-base sm:text-lg">「ログ」</span>しよう</li>
   </ul>
 </div>
 
@@ -11,20 +11,21 @@
   <div class="slider">
     <% @posts.each do |post| %>
       <% if post.image.attached? %>
-        <div><%= image_tag(post.image.variant(resize_to_fill: [400, 400]), class:"rounded-xl") %></div>
+        <div><%= image_tag(post.image.variant(resize_to_fill: [320, 320]), class:"rounded-xl") %></div>
       <% end %>
     <% end %>
   </div>
-  <div class= "my-15 text-center text-base text-yellow-900">
+</div>
+
+<div class="box fadeIn mx-auto max-w-[90%] mb-8">
+  <div class= "mt-20 mb-10 text-center text-base text-yellow-900">
     <ul>
       <li>SweetsLog は</li>
-      <li>美味しいスイーツを食べた幸せな記憶を記録し</li>
+      <li>美味しいスイーツを食べた幸せな記憶を記録し、</li>
       <li>シェアできるアプリです。</li>
     </ul>
   </div>
-</div>
 
-<div class="box fadeIn mx-auto max-w-[90%]">
   <div class="justify-items-center grid grid-cols-1 gap-2 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
     <div class="w-75 h-75 p-10 bg-white shadow-sm rounded-xl">
       <div class= "flex flex-wrap justify-center">
@@ -78,6 +79,7 @@
     </div>
   </div>
   <% unless user_signed_in? %>
-    <%= link_to '会員登録（無料）をして使ってみる', new_user_registration_path, class: "my-15 mx-auto block text-base text-center text-white bg-yellow-900 px-5 py-2.5 rounded-xl hover:bg-yellow-700" %>
+    <%= link_to '会員登録（無料）をして使ってみる', new_user_registration_path, class: "w-[90%] md:w-90 mx-auto mt-8 mb-4 px-5 py-2.5 block text-base text-center text-white bg-yellow-900 rounded-xl hover:bg-yellow-700" %>
+    <%= link_to 'みんなの投稿を見てみる', posts_path, class: "w-[90%] md:w-90 mx-auto px-5 py-2.5 block text-base text-center text-white bg-yellow-900 rounded-xl hover:bg-yellow-700" %>
   <% end %>
 </div>
